small latex setup pt2

--- a/report/capitolo1.tex
+++ b/report/capitolo1.tex
@@ -35,4 +35,23 @@
 
 % Sottosezione 1...
 
-\section{Data Semantics}\label{sec:data_semantics}
+\section{Data Introduction}\label{sec:data_intro}
+% introduction to each column, how they store the data, etc...
+% also should contain some graph to show the distributions etc...
+
+% ['originalTitle', 'rating', 'startYear', 'endYear', 'runtimeMinutes',
+% 'awardWins', 'numVotes', 'worstRating', 'bestRating', 'totalImages',
+% 'totalVideos', 'totalCredits', 'criticReviewsTotal', 'titleType',
+% 'awardNominationsExcludeWins', 'canHaveEpisodes', 'isRatable',
+% 'isAdult', 'numRegions', 'userReviewsTotal', 'ratingCount',
+% 'countryOfOrigin', 'genres']
+
+% [Bruno: I think we can discuss correlations and eliminations here]
+% e.g.:
+% <variable1>
+% <Paragraph about var1>
+% 
+% <variable2>, <variable3>
+% Paragraph about var2, 3 and why they are correlated and can be eliminated
+
+
