bruno data exploration

--- a/code/notebook_bruno.ipynb
+++ b/code/notebook_bruno.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[21909 rows x 23 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "[21909 rows x 23 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "       '(9, 10]', '(3, 4]', '(0, 1]', '(1, 2]'], dtype=object)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "[21909 rows x 23 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
        "array([ 8,  6,  9,  7,  3,  5, 10,  4,  1,  2])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "array([10])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "       1878])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
        "       2025., 1962., 1957., 1965.])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
        "Name: rating, Length: 75, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
        "Name: rating, Length: 857, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
        "Name: rating, Length: 75, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
        "Name: rating, Length: 397, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "       3.20e+02, 3.02e+02, 5.10e+02])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
        "Name: rating, Length: 254, dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
        "Name: rating, Length: 358, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
        "        530,  615,  394,  136,  233])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "        74])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,16 +1783,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x123cee8d0>]"
+       "[<matplotlib.lines.Line2D at 0x120b13110>]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
        "array([ 0,  1,  3,  8,  2,  4,  5,  6, 10, 12,  7,  9])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "        42,  26, 117,  98,  25,  70,  40, 155,  32,  56, 256])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
        "Name: originalTitle, dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2207,7 @@
        "         98,  193,  338,  293,  271,  329,  195,  555,  667])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
        "       385, 303, 165, 223, 175, 239, 209, 140, 103])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,7 +2251,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# has no missing values\n",
+    "[x for x in complete_df['ratingCount'].unique() if not isinstance(x, np.int64)]\n",
+    "# complete_df['ratingCount'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16054"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_df['originalTitle'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Episode #1.2', 'Episode #1.3', 'Pilot', 'Resurrection',\n",
+       "       'Once Upon a Time', 'The Uninvited', 'Episode #1.4',\n",
+       "       'Killing Time', 'Open House', 'Punch', 'Episode #1.1', 'Sex',\n",
+       "       'The Return', 'Episode #1.6', 'Duo', 'Happy', 'Animal Hospital',\n",
+       "       'No Means No', 'Faith', 'Episode #1.5', 'Episode #1.9',\n",
+       "       'Road Kill', 'On purge bébé', 'Episode #1.8', 'The Lady in Red',\n",
+       "       'Strange Bedfellows', 'Episode #1.11', 'Crisis', 'Episode #16.4',\n",
+       "       'Episode #1.126', 'The Party', 'Episode #1.17', 'Episode #3.8',\n",
+       "       'Alone', 'Episode #4.23', 'Forsaking All Others', 'Beyond Repair',\n",
+       "       'Utopia', 'Girl Talk', 'Episode #3.4', 'Episode #11.11',\n",
+       "       'The Ring', 'Baby Love', 'Golem', 'Episode #2.2', 'Hide and Seek',\n",
+       "       'Episode #1.13', 'Episode #2.1', 'Dangerous Intruder', 'Abandoned',\n",
+       "       'Episode #4.8', 'Secrets', 'Choices', 'Episode #1.14',\n",
+       "       'Episode #5.8', 'Image', 'Paradise', 'Deadline',\n",
+       "       'Anne of Green Gables', 'My Old Kentucky Home', 'The Key',\n",
+       "       'Blackmail', 'Episode #6.9', 'Episode #1.7', 'Panic',\n",
+       "       'Episode #1.21', 'Episode #1.12', 'The Prodigal', 'Best Friends',\n",
+       "       'Tough Love', 'Bonfire', 'Episode #2.8', 'Found', 'Red Wind',\n",
+       "       'Episode #2.3', 'The Gift', 'Angel', 'Episode #1.15',\n",
+       "       'Second Time Around', 'Episode #2.4', 'Sauce for the Goose',\n",
+       "       'Bebek', 'Hoop Dreams', 'Legacy', \"Oil's Well That Ends Well\",\n",
+       "       'The Devil You Know', 'Slave', 'Somebody to Love', 'Soliloquy',\n",
+       "       'Crook & Chase', 'Fire', 'Daag', 'Episode #1.10', 'The Hunt',\n",
+       "       'Darkness Rising', 'Episode #1.20', 'The Show', 'Never Too Old',\n",
+       "       'The Killing Ground', 'The Colonel', 'One of Our Own',\n",
+       "       'Play with Me', 'Happy Families', 'The Second Time Around',\n",
+       "       'The Hold Out', 'Episode #2.7', 'The Cat and the Fiddle',\n",
+       "       'The Boxer', 'Special', 'The Cruise', 'The Witness', 'The Game',\n",
+       "       'Breakout', 'Rain', 'Skin on Skin', 'Cargo', 'One of Us',\n",
+       "       'Episode #4.3', 'Take Me to Your Leader', 'The Box', 'Hopeless',\n",
+       "       'The Winner', 'Home', 'Dance', 'Thicker Than Water', 'Zero',\n",
+       "       'The Wedding', 'Body Shots', 'Sex Games', 'Vengeance', 'Hit Men',\n",
+       "       'Double Date', 'Where Are They Now?', 'One Word', 'Episode #5.34',\n",
+       "       'Episode #4.9', 'Stand and Deliver', 'Running Scared', 'Baggage',\n",
+       "       'To Have and to Hold', 'The Getaway', 'Suspects', 'Life', 'Rose',\n",
+       "       'Constantine: City of Demons', 'Episode #3.2', 'Dirty Tricks',\n",
+       "       'Straight', 'The Outcast', 'Freak City', 'Sporting Chance',\n",
+       "       'The Little Mermaid', 'Drifting', 'Episode #4.4', 'Heat', 'Amal',\n",
+       "       'Blind Date', 'Break It Down', 'Loose Lips Sink Relationships',\n",
+       "       'Fiskerlivets farer', 'For Better or Worse', 'Épisode 1',\n",
+       "       'Episode 9', 'Runaway', 'Mind Games', 'Part Two', 'Avsnitt 8',\n",
+       "       'Happily Ever After', 'Episode #3.6', 'Episode #1.36', 'Lisa',\n",
+       "       'The List', 'Quarantine', 'It Happened One Night', 'Aladdin',\n",
+       "       'Mine', 'An Eye for an Eye', 'Routine', 'Plan B', 'Anna Karenina',\n",
+       "       'Unfinished Business', 'School Girl', 'Moving On',\n",
+       "       'The Eyes Have It', 'Homecoming', 'Closure', 'Part 3', 'Stakeout',\n",
+       "       'Let There Be Light', 'Cien', 'Turandot', 'Great Barrier Reef',\n",
+       "       'Episode #3.5', 'Return to Sender', 'David', 'Episode #4.2'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[train_df['originalTitle'].duplicated()]['originalTitle'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>awardWins</th>\n",
+       "      <th>numVotes</th>\n",
+       "      <th>worstRating</th>\n",
+       "      <th>bestRating</th>\n",
+       "      <th>totalImages</th>\n",
+       "      <th>...</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>awardNominationsExcludeWins</th>\n",
+       "      <th>canHaveEpisodes</th>\n",
+       "      <th>isRatable</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>numRegions</th>\n",
+       "      <th>userReviewsTotal</th>\n",
+       "      <th>ratingCount</th>\n",
+       "      <th>countryOfOrigin</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [originalTitle, rating, startYear, endYear, runtimeMinutes, awardWins, numVotes, worstRating, bestRating, totalImages, totalVideos, totalCredits, criticReviewsTotal, titleType, awardNominationsExcludeWins, canHaveEpisodes, isRatable, isAdult, numRegions, userReviewsTotal, ratingCount, countryOfOrigin, genres]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[train_df.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['tvEpisode', 'videoGame', 'movie', 'tvSeries', 'video',\n",
+       "       'tvMiniSeries', 'short', 'tvMovie', 'tvSpecial', 'tvShort'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['titleType'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2470,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
