--- a/report/capitolo1.tex
+++ b/report/capitolo1.tex
@@ -104,9 +104,11 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
         \hline
         numVotes & Numeric & Number of votes the title has received \\ 
         \hline
-        worstRating & Numeric & Worst title rating \\ 
+        worstRating & Numeric & Worst title rating \\
+        & & Range: [1, 10] \\
         \hline
         bestRating & Numeric & Best title rating \\ 
+        & & Range: [1, 10] \\
         \hline
         totalImages & Numeric & Number of Images on the IMDb title page \\ 
         \hline
