--- a/code/notebook_bruno.ipynb
+++ b/code/notebook_bruno.ipynb
@@ -2576,27 +2576,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         ['US']\n",
-       "1        ['XWG']\n",
-       "2         ['RU']\n",
-       "3         ['MX']\n",
-       "4         ['KR']\n",
-       "          ...   \n",
-       "16426     ['FR']\n",
-       "16427     ['IN']\n",
-       "16428     ['IN']\n",
-       "16429     ['IT']\n",
-       "16430     ['IN']\n",
+       "0         [US]\n",
+       "1        [XWG]\n",
+       "2         [RU]\n",
+       "3         [MX]\n",
+       "4         [KR]\n",
+       "         ...  \n",
+       "16426     [FR]\n",
+       "16427     [IN]\n",
+       "16428     [IN]\n",
+       "16429     [IT]\n",
+       "16430     [IN]\n",
        "Name: countryOfOrigin, Length: 16431, dtype: object"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2605,7 +2605,7 @@
     "import ast\n",
     "\n",
     "# converts from \"[<country_list>]\" -> [<country_list>]\n",
-    "# train_df['countryOfOrigin'] = train_df['countryOfOrigin'].apply(ast.literal_eval)\n",
+    "train_df['countryOfOrigin'] = train_df['countryOfOrigin'].apply(ast.literal_eval)\n",
     "train_df['countryOfOrigin']"
    ]
   },
@@ -3099,7 +3099,7 @@
     }
    ],
    "source": [
-    "# kinda interesting\n",
+    "# kinda interesting but not really\n",
     "train_df[['rating', 'totalImages']].groupby('rating').mean().plot(kind= 'line')"
    ]
   },
@@ -3199,6 +3199,138 @@
     "    ].groupby(\n",
     "        (train_df['awardWins'] + train_df['awardNominationsExcludeWins']) #// 15\n",
     "    ).mean()['totalVideos'].plot(kind= 'line')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>numRegions</th>\n",
+       "      <th>countryOfOrigin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Neogenic Nightmare Chapter 3: Hydro-Man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[US]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Looping</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[XWG]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Idealnaya para</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[RU]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MasterChef Celebrity México</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[MX]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Lightdance</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[US]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16421</th>\n",
+       "      <td>Chance the Rapper Battles Spicy Wings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[US]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16422</th>\n",
+       "      <td>Four Wheels, No Brakes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[US]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16424</th>\n",
+       "      <td>Pineapple Rose</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[US]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16427</th>\n",
+       "      <td>Haar Jeet</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[IN]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16430</th>\n",
+       "      <td>Anniversary Night</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[IN]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9332 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 originalTitle  numRegions countryOfOrigin\n",
+       "0      Neogenic Nightmare Chapter 3: Hydro-Man           1            [US]\n",
+       "1                                      Looping           1           [XWG]\n",
+       "2                               Idealnaya para           1            [RU]\n",
+       "3                  MasterChef Celebrity México           1            [MX]\n",
+       "5                                   Lightdance           1            [US]\n",
+       "...                                        ...         ...             ...\n",
+       "16421    Chance the Rapper Battles Spicy Wings           1            [US]\n",
+       "16422                   Four Wheels, No Brakes           1            [US]\n",
+       "16424                           Pineapple Rose           1            [US]\n",
+       "16427                                Haar Jeet           1            [IN]\n",
+       "16430                        Anniversary Night           1            [IN]\n",
+       "\n",
+       "[9332 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[['originalTitle', 'numRegions', 'countryOfOrigin']][\n",
+    "    train_df[['numRegions', 'countryOfOrigin']].apply(\n",
+    "        lambda row: row['numRegions'] == len(row['countryOfOrigin']), axis= 1)\n",
+    "    ]"
    ]
   },
   {
