--- a/report/Relazione.tex
+++ b/report/Relazione.tex
@@ -43,6 +43,10 @@
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 
+% \usepackage{longtable}
+\usepackage{tabularx}
+
+
 % Stili configurabili del codice (lslisting) 
 \lstset{ %
 belowcaptionskip=0.5em,
