--- a/code/notebook_bruno.ipynb
+++ b/code/notebook_bruno.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[21909 rows x 23 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "[16431 rows x 23 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "       '(9, 10]', '(3, 4]', '(0, 1]', '(1, 2]'], dtype=object)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "[16431 rows x 23 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "array([ 8,  6,  9,  7,  3,  5, 10,  4,  1,  2])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "array([10])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "       1878])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
        "       '2025', '1962', '1957', '1965'], dtype=object)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
        "Name: rating, Length: 76, dtype: int64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
        "Name: rating, Length: 858, dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "Name: rating, Length: 77, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1508,7 @@
        "Name: rating, Length: 466, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "Name: rating, Length: 255, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
        "Name: rating, Length: 360, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
        "        530,  615,  394,  136,  233])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
        "        74])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,16 +1780,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x125dbd610>]"
+       "[<matplotlib.lines.Line2D at 0x11f254410>]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1812,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1937,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
        "array([ 0,  1,  3,  8,  2,  4,  5,  6, 10, 12,  7,  9])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1983,7 @@
        "        42,  26, 117,  98,  25,  70,  40, 155,  32,  56, 256])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
        "Name: originalTitle, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2159,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2204,7 @@
        "         98,  193,  338,  293,  271,  329,  195,  555,  667])"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2237,7 @@
        "       385, 303, 165, 223, 175, 239, 209, 140, 103])"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2257,7 @@
        "[]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
        "16054"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2347,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2419,7 @@
        "[0 rows x 23 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2461,7 @@
        "array(['tvSeries', 'tvMiniSeries'], dtype=object)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2492,7 @@
        "Name: originalTitle, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2515,7 @@
        "       57, 42, 45, 37, 40, 51, 58, 38, 62])"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2535,7 @@
        "array([ 781,   11,   38, ..., 7099, 2560, 3012])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
        "<Axes: xlabel='rating'>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2576,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2596,7 @@
        "Name: countryOfOrigin, Length: 16431, dtype: object"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,27 +2611,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         ['US']\n",
-       "1        ['XWG']\n",
-       "2         ['RU']\n",
-       "3         ['MX']\n",
-       "4         ['KR']\n",
-       "          ...   \n",
-       "16426     ['FR']\n",
-       "16427     ['IN']\n",
-       "16428     ['IN']\n",
-       "16429     ['IT']\n",
-       "16430     ['IN']\n",
-       "Name: countryOfOrigin, Length: 16431, dtype: object"
+       "14                       [FR, MK, SI]\n",
+       "39                           [CZ, SK]\n",
+       "52                           [CY, DE]\n",
+       "55                           [IT, FR]\n",
+       "56                           [CA, US]\n",
+       "                     ...             \n",
+       "16363                        [FR, BR]\n",
+       "16390                        [SG, MY]\n",
+       "16404                        [IN, PK]\n",
+       "16405    [US, KR, CN, FR, JP, CA, IT]\n",
+       "16416                        [AR, MX]\n",
+       "Name: countryOfOrigin, Length: 1146, dtype: object"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2642,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3020,7 @@
        "       'Animation,Music,Sci-Fi', 'News,Sci-Fi,Short'], dtype=object)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3043,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3063,7 +3063,7 @@
        "Name: genres, Length: 16431, dtype: object"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3074,7 +3074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3083,7 @@
        "<Axes: xlabel='rating'>"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3105,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3114,7 @@
        "<Axes: xlabel='rating'>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3135,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3178,7 +3178,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3203,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3321,7 +3321,7 @@
        "[9332 rows x 3 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3335,7 +3335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_df['isRatable'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3350,7 +3370,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
