rating-isAdult plot

--- a/report/capitolo1.tex
+++ b/report/capitolo1.tex
@@ -67,7 +67,7 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
         originalTitle & Nominal & Title in its original language \\  
         \hline
         rating & Ordinal & IMDB title rating class \\
-        & & Range: from (0,1] to (9,10], converted into an integer interval: [1, 10]\\ 
+        & & Range: from (0,1] to (9,10], converted into an integer interval by approximating to ceiling: [1, 10]\\ 
         \hline
         titleType & Nominal & The type of media product \\ 
         \hline
